<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRMaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="menu_add">Add</string>
    <string name="enter">Enter information</string>
    <string name="enter_button">Enter</string>
    <string name="stored_info">Stored Info</string>
    
    <string name="title">Title</string>
    <string name="card_num">Data1</string>
    <string name="exp_date">Data2</string>
    <string name="code">Data3</string>
    <string name="save">Save</string>
    <string name="fill">Fill in your data</string>
    
    
    <string name="desc">QRcode</string>
    <string name="select">Select</string>
    <string name="del">Delete</string>
    <string name="edit">Edit</string>
    
    
    <string name="edit_info">Edit your data</string>

</resources>